[FIX] icons sometimes not showing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -364,10 +364,10 @@ main {
 .person-social {
     margin-right: $spacing-unit / 2;
 }
-.person-social, .person .social-media-list {
+.person-social, .person .various-media-list {
     display: inline-block;
 }
-.person .social-media-list {
+.person .various-media-list {
     vertical-align: middle;
 }
 
